<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_new_event" tools:context="com.projects.mypillapp.activity.NewEvent"
    android:background="@android:color/background_light">
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:id="@+id/date">

                <TextView
                    android:freezesText = "true"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:text="วันที่"
                    android:id="@+id/textView6"
                    android:textColor="@android:color/holo_blue_dark"
                    android:layout_marginLeft="5dp"
                    android:textSize="@dimen/text_size_small"
                    android:layout_weight="1" />

                <TextView
                    android:freezesText = "true"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:text="@string/event_day"
                    android:id="@+id/date_event"
                    android:layout_gravity="center_horizontal"
                    android:layout_centerHorizontal="true"
                    android:textSize="@dimen/text_size_large"
                    android:layout_weight="5" />
            </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:id="@+id/time">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="เวลา"
                android:id="@+id/textView4"
                android:layout_marginLeft="5dp"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="@dimen/text_size_small" />

            <TextView
                android:freezesText = "true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_time"
                android:id="@+id/time_event"
                android:layout_gravity="center_horizontal"
                android:layout_centerHorizontal="true"
                android:textSize="@dimen/text_size_large" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="30dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:id="@+id/imageView17"
                android:layout_weight="1"
                android:src="@drawable/ic_label"
                android:layout_gravity="center_vertical"
                android:tint="@android:color/darker_gray" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/event_name"
                android:hint="@string/event_name"
                android:textSize="@dimen/text_size_large"
                android:layout_weight="5"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:maxLength="20" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:id="@+id/linear_location"
            android:onClick="setEventLocation">


            <ImageView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:id="@+id/imageView18"
                android:layout_weight="1"
                android:src="@drawable/ic_room"
                android:layout_gravity="center_vertical"
                android:tint="@android:color/darker_gray" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/event_location"
                android:layout_weight="2.5"
                android:textSize="@dimen/text_size_medium"
                android:layout_gravity="center_vertical" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/event_location"
                android:layout_weight="2.5"
                android:layout_gravity="center_vertical"
                android:freezesText="true"
                android:ellipsize="end"
                android:singleLine="true" />


        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:id="@+id/linear_doctor"
            android:onClick="setSelectDoctor">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:src="@drawable/ic_stethoscope"
                android:layout_gravity="center_vertical"
                android:tint="@android:color/darker_gray" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/event_doc"
                android:layout_weight="2.5"
                android:textSize="@dimen/text_size_medium"
                android:layout_gravity="center_vertical" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/event_doctor"
                android:layout_weight="2.5"
                android:layout_gravity="center_vertical"
                android:freezesText="true"
                android:ellipsize="end"
                android:singleLine="true" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp"
            android:id="@+id/linear_detail"
            android:onClick="setEventDetail">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:id="@+id/imageView19"
                android:layout_weight="1"
                android:src="@drawable/ic_receipt"
                android:layout_gravity="center_vertical"
                android:tint="@android:color/darker_gray" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/event_detail"
                android:layout_weight="2.5"
                android:textSize="@dimen/text_size_medium"
                android:layout_gravity="center_vertical" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/event_detail"
                android:layout_weight="2.5"
                android:layout_gravity="center_vertical"
                android:freezesText="true"
                android:ellipsize="end"
                android:singleLine="true" />

        </LinearLayout>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>

</LinearLayout>
