<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_time_setting" tools:context="com.projects.mypillapp.activity.TimeSetting">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:id="@+id/time_break_set">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_breakfas"
                android:id="@+id/txt_time_breakfas"
                android:textSize="@dimen/text_size_large"
                android:textColor="@android:color/holo_green_dark"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/imageView8" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/click_set_time"
                android:id="@+id/time_break"
                android:textSize="@dimen/text_size_large"
                android:layout_alignTop="@+id/txt_time_breakfas"
                android:layout_alignParentEnd="true" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView8"
                android:src="@drawable/sunrise_100"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Breakfast"
                android:id="@+id/textView21"
                android:textSize="@dimen/text_size_small"
                android:layout_alignTop="@+id/imageView8"
                android:layout_alignStart="@+id/txt_time_breakfas" />

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="0.2dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:background="@android:color/darker_gray"></FrameLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:id="@+id/time_lunch_set">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_lunch"
                android:id="@+id/txt_time_lunch"
                android:textSize="@dimen/text_size_large"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/imageView9"
                android:textColor="@android:color/holo_orange_dark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/click_set_time"
                android:id="@+id/time_lunch"
                android:textSize="@dimen/text_size_large"
                android:layout_alignTop="@+id/txt_time_lunch"
                android:layout_alignParentEnd="true" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView9"
                android:src="@drawable/summer_100"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Lunch"
                android:id="@+id/textView26"
                android:textSize="@dimen/text_size_small"
                android:layout_alignTop="@+id/imageView9"
                android:layout_toEndOf="@+id/imageView9" />

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="0.2dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:background="@android:color/darker_gray" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:id="@+id/time_dinner_set">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_dinner"
                android:id="@+id/txt_time_dinner"
                android:textSize="@dimen/text_size_large"
                android:textColor="@android:color/holo_blue_dark"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/imageView10" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/click_set_time"
                android:id="@+id/time_dinner"
                android:textSize="@dimen/text_size_large"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView10"
                android:src="@drawable/sunset_100"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Dinner"
                android:id="@+id/textView27"
                android:layout_alignTop="@+id/imageView10"
                android:layout_alignStart="@+id/txt_time_dinner"
                android:textSize="@dimen/text_size_small" />

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="0.2dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:background="@android:color/darker_gray" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:id="@+id/time_night_set">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_night"
                android:id="@+id/txt_time"
                android:textSize="@dimen/text_size_large"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/imageView11"
                android:textColor="@android:color/holo_purple"
                android:layout_marginTop="2dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/click_set_time"
                android:id="@+id/time_night"
                android:textSize="@dimen/text_size_large"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView11"
                android:src="@drawable/partly_cloudy_night_100"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Night"
                android:id="@+id/textView32"
                android:textSize="@dimen/text_size_small"
                android:layout_alignTop="@+id/imageView11"
                android:layout_alignStart="@+id/txt_time" />

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="0.2dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:background="@android:color/darker_gray" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
